--- a/index.html
+++ b/index.html
@@ -2,55 +2,97 @@
 <html lang="cs">
 <head>
 <meta charset="utf-8">
-<title>Kotelna – Attack FD 25</title>
+<title>Attack FD 25 – Řídicí panel</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:Segoe UI,system-ui;
-  background:linear-gradient(135deg,#1e3c72,#2a5298);
-  color:#222;
+  font-family:Inter,Segoe UI,system-ui;
+  background:#0f172a;
+  color:#e5e7eb;
 }
 header{
-  background:#000;
-  color:#fff;
-  padding:15px 20px;
+  background:#020617;
+  color:#e5e7eb;
+  padding:14px 24px;
   display:flex;
   justify-content:space-between;
+  font-size:14px;
+  letter-spacing:.5px;
 }
-main{max-width:1400px;margin:auto;padding:20px}
+main{max-width:1500px;margin:auto;padding:24px}
+
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:18px;
 }
+
 .card{
-  background:#fff;
-  border-radius:14px;
-  padding:20px;
-  box-shadow:0 10px 30px rgba(0,0,0,.25);
+  background:#020617;
+  border:1px solid #1e293b;
+  border-radius:12px;
+  padding:18px;
 }
-.card.center{text-align:center}
-h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
+
+.card.big{
+  grid-column:span 2;
+}
+
+h2{
+  margin:0 0 8px;
+  font-size:13px;
+  font-weight:500;
+  color:#94a3b8;
+  text-transform:uppercase;
+  letter-spacing:.08em;
+}
+
 .value{
-  font-size:32px;
+  font-size:34px;
   font-weight:700;
-  color:#d32f2f;
+  color:#f8fafc;
 }
-.value.big{
-  font-size:36px;
-  font-weight:800;
+
+.unit{
+  font-size:16px;
+  color:#94a3b8;
+  margin-left:4px;
 }
-.value.power{color:#ef6c00}
-.value.delta{color:#1565c0}
-.sub{font-size:13px;color:#555}
-.green{color:#2e7d32}
-.blue{color:#1565c0}
-.orange{color:#ef6c00}
-input{width:100%;padding:10px;font-size:15px}
-.settings{display:grid;grid-template-columns:1fr 1fr;gap:15px}
+
+.accent-red{color:#ef4444}
+.accent-blue{color:#3b82f6}
+.accent-orange{color:#f97316}
+.accent-green{color:#22c55e}
+
+.sub{
+  margin-top:6px;
+  font-size:13px;
+  color:#94a3b8;
+}
+
+.split{
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-end;
+}
+
+.settings{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:16px;
+}
+
+input{
+  width:100%;
+  padding:10px;
+  background:#020617;
+  border:1px solid #1e293b;
+  color:#e5e7eb;
+  border-radius:8px;
+}
 </style>
 </head>
 
@@ -58,34 +100,33 @@ input{width:100%;padding:10px;font-size:15px}
 
 <header>
   <div id="clock"></div>
-  <div>Attack FD 25 – Profi panel</div>
+  <div>ATTACK FD 25 · TECHNICKÝ PANEL</div>
 </header>
 
 <main>
 
 <!-- TEPLOTY -->
 <div class="grid">
-  <div class="card center"><h2>🔥 Kotel</h2><div class="value big" id="tKotel">--</div></div>
-  <div class="card center"><h2>⚙️ Podavač</h2><div class="value big" id="tPodavac">--</div></div>
-  <div class="card center"><h2>💧 Bojler</h2><div class="value big" id="tBojler">--</div></div>
-  <div class="card center"><h2>↩️ Zpátečka</h2><div class="value big" id="tZpet">--</div></div>
-  <div class="card center"><h2>🌡️ Venku</h2><div class="value big" id="tVenku">--</div></div>
-  <div class="card center"><h2>⏱️ Podavač – celkem</h2><div class="value big" id="feedTotal">--</div></div>
+  <div class="card"><h2>Kotel</h2><div class="value accent-red" id="tKotel">--</div></div>
+  <div class="card"><h2>Podavač</h2><div class="value accent-red" id="tPodavac">--</div></div>
+  <div class="card"><h2>Bojler</h2><div class="value" id="tBojler">--</div></div>
+  <div class="card"><h2>Zpátečka</h2><div class="value" id="tZpet">--</div></div>
+  <div class="card"><h2>Venkovní teplota</h2><div class="value" id="tVenku">--</div></div>
+  <div class="card"><h2>Podavač – celkem</h2><div class="value" id="feedTotal">--</div></div>
 </div>
 
 <br>
 
 <!-- VÝKON + ΔT -->
 <div class="grid">
-  <div class="card center">
-    <h2>⚡ Aktuální výkon</h2>
-    <div class="value big power" id="powerKW">-- kW</div>
-    <div class="sub">z poslední hodiny</div>
+  <div class="card big">
+    <h2>Aktuální výkon (poslední hodina)</h2>
+    <div class="value accent-orange" id="powerKW">-- kW</div>
   </div>
 
-  <div class="card center">
-    <h2>🌡️ Teplotní spád ΔT</h2>
-    <div class="value big delta" id="deltaT">-- °C</div>
+  <div class="card big">
+    <h2>Teplotní spád ΔT</h2>
+    <div class="value accent-blue" id="deltaT">-- °C</div>
     <div class="sub">Kotel – Zpátečka</div>
   </div>
 </div>
@@ -94,32 +135,32 @@ input{width:100%;padding:10px;font-size:15px}
 
 <!-- SPOTŘEBA -->
 <div class="card">
-<h2>💰 Spotřeba uhlí</h2>
+<h2>Spotřeba uhlí</h2>
 
 <div class="grid">
   <div>
-    <div class="sub">HODINA</div>
-    <div class="value orange" id="kgHour">0 kg</div>
+    <div class="sub">Hodina</div>
+    <div class="value accent-orange" id="kgHour">0 kg</div>
   </div>
 
   <div>
-    <div class="sub">DNES</div>
-    <div class="value green" id="kgDay">0 kg</div>
+    <div class="sub">Dnes</div>
+    <div class="value accent-green" id="kgDay">0 kg</div>
   </div>
 
   <div>
-    <div class="sub">MĚSÍC</div>
-    <div class="value blue" id="kgMonth">0 kg</div>
+    <div class="sub">Měsíc</div>
+    <div class="value accent-blue" id="kgMonth">0 kg</div>
   </div>
 
   <div>
-    <div class="sub">CENA DNES</div>
-    <div class="value" id="costDay">0 Kč</div>
+    <div class="sub">Cena dnes</div>
+    <div class="value accent-red" id="costDay">0 Kč</div>
   </div>
 
   <div>
-    <div class="sub">CENA MĚSÍC</div>
-    <div class="value" id="costMonth">0 Kč</div>
+    <div class="sub">Cena měsíc</div>
+    <div class="value accent-red" id="costMonth">0 Kč</div>
   </div>
 </div>
 </div>
@@ -128,7 +169,7 @@ input{width:100%;padding:10px;font-size:15px}
 
 <!-- NASTAVENÍ -->
 <div class="card">
-<h2>⚙️ Nastavení</h2>
+<h2>Nastavení výpočtů</h2>
 <div class="settings">
   <div>
     <label>Kg uhlí / 10 min</label>
@@ -149,7 +190,7 @@ const ENERGY = 4.8;
 const EFF = 0.75;
 
 function updateClock(){
-  clock.textContent = new Date().toLocaleString("cs-CZ");
+  clock.textContent=new Date().toLocaleString("cs-CZ");
 }
 
 function secToKg(sec){
@@ -188,11 +229,9 @@ async function update(){
   const totalSec=+f.field8||0;
   feedTotal.textContent=totalSec+" s";
 
-  // ΔT
   const delta=(+f.field5||0)-(+f.field1||0);
   deltaT.textContent=delta.toFixed(1)+" °C";
 
-  // HODINA
   const hourFeeds=await fetchFeeds("minutes=60&results=200");
   if(hourFeeds.length>1){
     const hSec=hourFeeds.at(-1).field8-hourFeeds[0].field8;
@@ -201,13 +240,11 @@ async function update(){
     powerKW.textContent=(hKg*ENERGY*EFF).toFixed(1)+" kW";
   }
 
-  // DEN
   const daySec=resetDaily(totalSec);
   const dayKg=secToKg(daySec);
   kgDay.textContent=dayKg.toFixed(2)+" kg";
   costDay.textContent=(dayKg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 
-  // MĚSÍC
   const m=await fetchFeeds("days=30&results=8000");
   if(m.length>1){
     const mKg=secToKg(m.at(-1).field8-m[0].field8);
