--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@ body{
 }
 header{
   background:#020617;
-  color:#e5e7eb;
   padding:14px 24px;
   display:flex;
   justify-content:space-between;
   font-size:14px;
   letter-spacing:.5px;
 }
-main{max-width:1500px;margin:auto;padding:24px}
+main{max-width:1600px;margin:auto;padding:24px}
 
 .grid{
   display:grid;
@@ -33,18 +32,15 @@ main{max-width:1500px;margin:auto;padding:24px}
 .card{
   background:#020617;
   border:1px solid #1e293b;
-  border-radius:12px;
+  border-radius:14px;
   padding:18px;
 }
 
-.card.big{
-  grid-column:span 2;
-}
+.card.big{grid-column:span 2}
 
 h2{
   margin:0 0 8px;
   font-size:13px;
-  font-weight:500;
   color:#94a3b8;
   text-transform:uppercase;
   letter-spacing:.08em;
@@ -53,37 +49,30 @@ h2{
 .value{
   font-size:34px;
   font-weight:700;
-  color:#f8fafc;
 }
 
-.unit{
-  font-size:16px;
+.fullscreen{
+  grid-column:1/-1;
+  text-align:center;
+  padding:40px;
+}
+
+.fulltime{
+  font-size:96px;
+  font-weight:800;
+  letter-spacing:4px;
+  color:#f97316;
+}
+
+.sub{
+  font-size:14px;
   color:#94a3b8;
-  margin-left:4px;
 }
 
 .accent-red{color:#ef4444}
 .accent-blue{color:#3b82f6}
 .accent-orange{color:#f97316}
 .accent-green{color:#22c55e}
-
-.sub{
-  margin-top:6px;
-  font-size:13px;
-  color:#94a3b8;
-}
-
-.split{
-  display:flex;
-  justify-content:space-between;
-  align-items:flex-end;
-}
-
-.settings{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:16px;
-}
 
 input{
   width:100%;
@@ -105,6 +94,15 @@ input{
 
 <main>
 
+<!-- FULLSCREEN ČAS PODAVAČE -->
+<div class="card fullscreen">
+  <h2>Podavač – celkový čas chodu</h2>
+  <div class="fulltime" id="feederHHMMSS">--:--:--</div>
+  <div class="sub">akumulovaný provoz</div>
+</div>
+
+<br>
+
 <!-- TEPLOTY -->
 <div class="grid">
   <div class="card"><h2>Kotel</h2><div class="value accent-red" id="tKotel">--</div></div>
@@ -112,7 +110,6 @@ input{
   <div class="card"><h2>Bojler</h2><div class="value" id="tBojler">--</div></div>
   <div class="card"><h2>Zpátečka</h2><div class="value" id="tZpet">--</div></div>
   <div class="card"><h2>Venkovní teplota</h2><div class="value" id="tVenku">--</div></div>
-  <div class="card"><h2>Podavač – celkem</h2><div class="value" id="feedTotal">--</div></div>
 </div>
 
 <br>
@@ -131,57 +128,6 @@ input{
   </div>
 </div>
 
-<br>
-
-<!-- SPOTŘEBA -->
-<div class="card">
-<h2>Spotřeba uhlí</h2>
-
-<div class="grid">
-  <div>
-    <div class="sub">Hodina</div>
-    <div class="value accent-orange" id="kgHour">0 kg</div>
-  </div>
-
-  <div>
-    <div class="sub">Dnes</div>
-    <div class="value accent-green" id="kgDay">0 kg</div>
-  </div>
-
-  <div>
-    <div class="sub">Měsíc</div>
-    <div class="value accent-blue" id="kgMonth">0 kg</div>
-  </div>
-
-  <div>
-    <div class="sub">Cena dnes</div>
-    <div class="value accent-red" id="costDay">0 Kč</div>
-  </div>
-
-  <div>
-    <div class="sub">Cena měsíc</div>
-    <div class="value accent-red" id="costMonth">0 Kč</div>
-  </div>
-</div>
-</div>
-
-<br>
-
-<!-- NASTAVENÍ -->
-<div class="card">
-<h2>Nastavení výpočtů</h2>
-<div class="settings">
-  <div>
-    <label>Kg uhlí / 10 min</label>
-    <input type="number" id="kg10min" value="2.5" step="0.1">
-  </div>
-  <div>
-    <label>Cena / kg</label>
-    <input type="number" id="priceKg" value="6.2" step="0.1">
-  </div>
-</div>
-</div>
-
 </main>
 
 <script>
@@ -193,21 +139,14 @@ function updateClock(){
   clock.textContent=new Date().toLocaleString("cs-CZ");
 }
 
-function secToKg(sec){
-  return (sec/600)*(+kg10min.value||2.5);
-}
-
-function dayKey(){
-  return new Date().toISOString().slice(0,10);
-}
-
-function resetDaily(sec){
-  if(localStorage.day!==dayKey()){
-    localStorage.day=dayKey();
-    localStorage.baseDay=sec;
-  }
-  if(!localStorage.baseDay) localStorage.baseDay=sec;
-  return sec-localStorage.baseDay;
+function secToHHMMSS(sec){
+  sec=Math.floor(sec);
+  const h=Math.floor(sec/3600);
+  const m=Math.floor((sec%3600)/60);
+  const s=sec%60;
+  return String(h).padStart(2,'0')+":"+
+         String(m).padStart(2,'0')+":"+
+         String(s).padStart(2,'0');
 }
 
 async function fetchFeeds(p){
@@ -227,29 +166,14 @@ async function update(){
   tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
 
   const totalSec=+f.field8||0;
-  feedTotal.textContent=totalSec+" s";
+  feederHHMMSS.textContent=secToHHMMSS(totalSec);
 
-  const delta=(+f.field5||0)-(+f.field1||0);
-  deltaT.textContent=delta.toFixed(1)+" °C";
+  deltaT.textContent=((+f.field5||0)-(+f.field1||0)).toFixed(1)+" °C";
 
   const hourFeeds=await fetchFeeds("minutes=60&results=200");
   if(hourFeeds.length>1){
     const hSec=hourFeeds.at(-1).field8-hourFeeds[0].field8;
-    const hKg=secToKg(hSec);
-    kgHour.textContent=hKg.toFixed(2)+" kg";
-    powerKW.textContent=(hKg*ENERGY*EFF).toFixed(1)+" kW";
-  }
-
-  const daySec=resetDaily(totalSec);
-  const dayKg=secToKg(daySec);
-  kgDay.textContent=dayKg.toFixed(2)+" kg";
-  costDay.textContent=(dayKg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
-
-  const m=await fetchFeeds("days=30&results=8000");
-  if(m.length>1){
-    const mKg=secToKg(m.at(-1).field8-m[0].field8);
-    kgMonth.textContent=mKg.toFixed(0)+" kg";
-    costMonth.textContent=(mKg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
+    powerKW.textContent=((hSec/600)*2.5*ENERGY*EFF).toFixed(1)+" kW";
   }
 }
 
@@ -257,8 +181,6 @@ updateClock();
 update();
 setInterval(updateClock,1000);
 setInterval(update,30000);
-kg10min.oninput=update;
-priceKg.oninput=update;
 </script>
 
 </body>
