--- a/index.html
+++ b/index.html
@@ -2,86 +2,44 @@
 <html lang="cs">
 <head>
 <meta charset="utf-8">
-<title>Attack FD 25 – Řídicí panel</title>
+<title>Kotelna – Attack FD 25</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:Inter,Segoe UI,system-ui;
-  background:#0f172a;
-  color:#e5e7eb;
+  font-family:Segoe UI,system-ui;
+  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  color:#222;
 }
 header{
-  background:#020617;
-  padding:14px 24px;
+  background:#000;
+  color:#fff;
+  padding:15px 20px;
   display:flex;
   justify-content:space-between;
-  font-size:14px;
-  letter-spacing:.5px;
 }
-main{max-width:1600px;margin:auto;padding:24px}
-
+main{max-width:1400px;margin:auto;padding:20px}
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:18px;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
 }
-
 .card{
-  background:#020617;
-  border:1px solid #1e293b;
+  background:#fff;
   border-radius:14px;
-  padding:18px;
+  padding:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,.25);
 }
-
-.card.big{grid-column:span 2}
-
-h2{
-  margin:0 0 8px;
-  font-size:13px;
-  color:#94a3b8;
-  text-transform:uppercase;
-  letter-spacing:.08em;
-}
-
-.value{
-  font-size:34px;
-  font-weight:700;
-}
-
-.fullscreen{
-  grid-column:1/-1;
-  text-align:center;
-  padding:40px;
-}
-
-.fulltime{
-  font-size:96px;
-  font-weight:800;
-  letter-spacing:4px;
-  color:#f97316;
-}
-
-.sub{
-  font-size:14px;
-  color:#94a3b8;
-}
-
-.accent-red{color:#ef4444}
-.accent-blue{color:#3b82f6}
-.accent-orange{color:#f97316}
-.accent-green{color:#22c55e}
-
-input{
-  width:100%;
-  padding:10px;
-  background:#020617;
-  border:1px solid #1e293b;
-  color:#e5e7eb;
-  border-radius:8px;
-}
+h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
+.value{font-size:32px;font-weight:700;color:#d32f2f}
+.sub{font-size:13px;color:#555}
+.green{color:#2e7d32}
+.blue{color:#1565c0}
+.orange{color:#ef6c00}
+input{width:100%;padding:10px;font-size:15px}
+.settings{display:grid;grid-template-columns:1fr 1fr;gap:15px}
 </style>
 </head>
 
@@ -89,43 +47,72 @@ input{
 
 <header>
   <div id="clock"></div>
-  <div>ATTACK FD 25 · TECHNICKÝ PANEL</div>
+  <div>Attack FD 25 – Profi panel</div>
 </header>
 
 <main>
 
-<!-- FULLSCREEN ČAS PODAVAČE -->
-<div class="card fullscreen">
-  <h2>Podavač – celkový čas chodu</h2>
-  <div class="fulltime" id="feederHHMMSS">--:--:--</div>
-  <div class="sub">akumulovaný provoz</div>
+<!-- TEPLOTY + VÝKON -->
+<div class="grid">
+  <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
+  <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
+  <div class="card"><h2>🌡️ Teplotní spád ΔT</h2><div class="value orange" id="deltaT">--</div></div>
+  <div class="card"><h2>⚡ Výkon</h2><div class="value green" id="powerKWbig">--</div></div>
+  <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
+  <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
+  <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
+  <div class="card"><h2>⏱️ Podavač – celkem</h2><div class="value" id="feedTotal">--</div></div>
 </div>
 
 <br>
 
-<!-- TEPLOTY -->
+<!-- SPOTŘEBA -->
+<div class="card">
+<h2>💰 Spotřeba uhlí</h2>
+
 <div class="grid">
-  <div class="card"><h2>Kotel</h2><div class="value accent-red" id="tKotel">--</div></div>
-  <div class="card"><h2>Podavač</h2><div class="value accent-red" id="tPodavac">--</div></div>
-  <div class="card"><h2>Bojler</h2><div class="value" id="tBojler">--</div></div>
-  <div class="card"><h2>Zpátečka</h2><div class="value" id="tZpet">--</div></div>
-  <div class="card"><h2>Venkovní teplota</h2><div class="value" id="tVenku">--</div></div>
+  <div>
+    <div class="sub">HODINA</div>
+    <div class="value orange" id="kgHour">0 kg</div>
+  </div>
+
+  <div>
+    <div class="sub">DNES</div>
+    <div class="value green" id="kgDay">0 kg</div>
+  </div>
+
+  <div>
+    <div class="sub">MĚSÍC</div>
+    <div class="value blue" id="kgMonth">0 kg</div>
+  </div>
+
+  <div>
+    <div class="sub">CENA DNES</div>
+    <div class="value" id="costDay">0 Kč</div>
+  </div>
+
+  <div>
+    <div class="sub">CENA MĚSÍC</div>
+    <div class="value" id="costMonth">0 Kč</div>
+  </div>
+</div>
 </div>
 
 <br>
 
-<!-- VÝKON + ΔT -->
-<div class="grid">
-  <div class="card big">
-    <h2>Aktuální výkon (poslední hodina)</h2>
-    <div class="value accent-orange" id="powerKW">-- kW</div>
+<!-- NASTAVENÍ -->
+<div class="card">
+<h2>⚙️ Nastavení</h2>
+<div class="settings">
+  <div>
+    <label>Kg uhlí / 10 min</label>
+    <input type="number" id="kg10min" value="2.5" step="0.1">
   </div>
-
-  <div class="card big">
-    <h2>Teplotní spád ΔT</h2>
-    <div class="value accent-blue" id="deltaT">-- °C</div>
-    <div class="sub">Kotel – Zpátečka</div>
+  <div>
+    <label>Cena / kg</label>
+    <input type="number" id="priceKg" value="6.2" step="0.1">
   </div>
+</div>
 </div>
 
 </main>
@@ -136,17 +123,24 @@ const ENERGY = 4.8;
 const EFF = 0.75;
 
 function updateClock(){
-  clock.textContent=new Date().toLocaleString("cs-CZ");
+  clock.textContent = new Date().toLocaleString("cs-CZ");
 }
 
-function secToHHMMSS(sec){
-  sec=Math.floor(sec);
-  const h=Math.floor(sec/3600);
-  const m=Math.floor((sec%3600)/60);
-  const s=sec%60;
-  return String(h).padStart(2,'0')+":"+
-         String(m).padStart(2,'0')+":"+
-         String(s).padStart(2,'0');
+function secToKg(sec){
+  return (sec/600)*(+kg10min.value||2.5);
+}
+
+function dayKey(){
+  return new Date().toISOString().slice(0,10);
+}
+
+function resetDaily(sec){
+  if(localStorage.day!==dayKey()){
+    localStorage.day=dayKey();
+    localStorage.baseDay=sec;
+  }
+  if(!localStorage.baseDay) localStorage.baseDay=sec;
+  return sec-localStorage.baseDay;
 }
 
 async function fetchFeeds(p){
@@ -159,21 +153,41 @@ async function update(){
   if(!cur.length) return;
   const f=cur[0];
 
-  tKotel.textContent=(+f.field5||0).toFixed(1)+" °C";
+  const tK = +f.field5||0;
+  const tZ = +f.field1||0;
+
+  tKotel.textContent = tK.toFixed(1)+" °C";
   tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
   tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
-  tZpet.textContent=(+f.field1||0).toFixed(1)+" °C";
+  tZpet.textContent  = tZ.toFixed(1)+" °C";
   tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
 
+  deltaT.textContent = (tK - tZ).toFixed(1)+" °C";
+
   const totalSec=+f.field8||0;
-  feederHHMMSS.textContent=secToHHMMSS(totalSec);
+  feedTotal.textContent=totalSec+" s";
 
-  deltaT.textContent=((+f.field5||0)-(+f.field1||0)).toFixed(1)+" °C";
-
+  // HODINA
   const hourFeeds=await fetchFeeds("minutes=60&results=200");
   if(hourFeeds.length>1){
     const hSec=hourFeeds.at(-1).field8-hourFeeds[0].field8;
-    powerKW.textContent=((hSec/600)*2.5*ENERGY*EFF).toFixed(1)+" kW";
+    const hKg=secToKg(hSec);
+    kgHour.textContent=hKg.toFixed(2)+" kg";
+    powerKWbig.textContent=(hKg*ENERGY*EFF).toFixed(1)+" kW";
+  }
+
+  // DEN
+  const daySec=resetDaily(totalSec);
+  const dayKg=secToKg(daySec);
+  kgDay.textContent=dayKg.toFixed(2)+" kg";
+  costDay.textContent=(dayKg*(+priceKg.value||15.5)).toFixed(0)+" Kč";
+
+  // MĚSÍC
+  const m=await fetchFeeds("days=30&results=8000");
+  if(m.length>1){
+    const mKg=secToKg(m.at(-1).field8-m[0].field8);
+    kgMonth.textContent=mKg.toFixed(0)+" kg";
+    costMonth.textContent=(mKg*(+priceKg.value||15.5)).toFixed(0)+" Kč";
   }
 }
 
@@ -181,6 +195,8 @@ updateClock();
 update();
 setInterval(updateClock,1000);
 setInterval(update,30000);
+kg10min.oninput=update;
+priceKg.oninput=update;
 </script>
 
 </body>
