--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ input{width:100%;padding:10px;font-size:15px}
   </div>
 
   <div>
-    <div class="sub">DNES</div>
+    <div class="sub">DNES (od 00:00)</div>
     <div class="value green" id="kgDay">0 kg</div>
   </div>
 
@@ -130,17 +130,10 @@ function secToKg(sec){
   return (sec/600)*(+kg10min.value||2.5);
 }
 
-function dayKey(){
-  return new Date().toISOString().slice(0,10);
-}
-
-function resetDaily(sec){
-  if(localStorage.day!==dayKey()){
-    localStorage.day=dayKey();
-    localStorage.baseDay=sec;
-  }
-  if(!localStorage.baseDay) localStorage.baseDay=sec;
-  return sec-localStorage.baseDay;
+function todayStartISO(){
+  const d = new Date();
+  d.setHours(0,0,0,0);
+  return d.toISOString();
 }
 
 async function fetchFeeds(p){
@@ -167,7 +160,7 @@ async function update(){
   const totalSec=+f.field8||0;
   feedTotal.textContent=totalSec+" s";
 
-  // HODINA
+  // ===== HODINA =====
   const hourFeeds=await fetchFeeds("minutes=60&results=200");
   if(hourFeeds.length>1){
     const hSec=hourFeeds.at(-1).field8-hourFeeds[0].field8;
@@ -176,13 +169,18 @@ async function update(){
     powerKWbig.textContent=(hKg*ENERGY*EFF).toFixed(1)+" kW";
   }
 
-  // DEN
-  const daySec=resetDaily(totalSec);
-  const dayKg=secToKg(daySec);
-  kgDay.textContent=dayKg.toFixed(2)+" kg";
-  costDay.textContent=(dayKg*(+priceKg.value||15.5)).toFixed(0)+" Kč";
+  // ===== DNES OD 00:00 =====
+  const dayFeeds = await fetchFeeds(
+    "start="+todayStartISO()+"&results=8000"
+  );
+  if(dayFeeds.length>1){
+    const daySec = dayFeeds.at(-1).field8 - dayFeeds[0].field8;
+    const dayKg = secToKg(daySec);
+    kgDay.textContent = dayKg.toFixed(2)+" kg";
+    costDay.textContent = (dayKg*(+priceKg.value||15.5)).toFixed(0)+" Kč";
+  }
 
-  // MĚSÍC
+  // ===== MĚSÍC =====
   const m=await fetchFeeds("days=30&results=8000");
   if(m.length>1){
     const mKg=secToKg(m.at(-1).field8-m[0].field8);
