--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ header{
   justify-content:space-between;
 }
 main{max-width:1400px;margin:auto;padding:20px}
+
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
@@ -35,11 +36,62 @@ main{max-width:1400px;margin:auto;padding:20px}
 h2{margin:0 0 10px;font-size:16px;color:#1e3c72}
 .value{font-size:32px;font-weight:700;color:#d32f2f}
 .sub{font-size:13px;color:#555}
+
 .green{color:#2e7d32}
 .blue{color:#1565c0}
 .orange{color:#ef6c00}
-input{width:100%;padding:10px;font-size:15px}
-.settings{display:grid;grid-template-columns:1fr 1fr;gap:15px}
+
+input{
+  width:100%;
+  padding:10px;
+  font-size:15px;
+}
+.settings{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:15px;
+}
+
+button{
+  padding:12px 18px;
+  font-size:15px;
+  border:none;
+  border-radius:10px;
+  background:#1565c0;
+  color:#fff;
+  cursor:pointer;
+}
+button:hover{background:#0d47a1}
+
+/* ===== MODAL ===== */
+#historyModal{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.7);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:999;
+}
+.modalContent{
+  background:#fff;
+  width:90%;
+  max-width:900px;
+  max-height:90vh;
+  overflow:auto;
+  padding:20px;
+  border-radius:14px;
+}
+table{
+  width:100%;
+  border-collapse:collapse;
+}
+th,td{
+  padding:10px;
+  border-bottom:1px solid #ddd;
+  text-align:center;
+}
+th{background:#f0f0f0}
 </style>
 </head>
 
@@ -77,7 +129,7 @@ input{width:100%;padding:10px;font-size:15px}
   </div>
 
   <div>
-    <div class="sub">DNES (od 00:00)</div>
+    <div class="sub">DNES</div>
     <div class="value green" id="kgDay">0 kg</div>
   </div>
 
@@ -96,6 +148,9 @@ input{width:100%;padding:10px;font-size:15px}
     <div class="value" id="costMonth">0 Kč</div>
   </div>
 </div>
+
+<br>
+<button id="btnHistory">📊 Denní historie měsíce</button>
 </div>
 
 <br>
@@ -117,23 +172,59 @@ input{width:100%;padding:10px;font-size:15px}
 
 </main>
 
+<!-- MODAL -->
+<div id="historyModal">
+  <div class="modalContent">
+    <h2>📊 Denní historie – tento měsíc</h2>
+    <table id="historyTable">
+      <thead>
+        <tr>
+          <th>Den</th>
+          <th>Čas podavače</th>
+          <th>Uhlí [kg]</th>
+          <th>Výkon [kW]</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <br>
+    <button onclick="closeHistory()">Zavřít</button>
+  </div>
+</div>
+
 <script>
 const CHANNEL = 231269;
 const ENERGY = 4.8;
 const EFF = 0.75;
 
-function updateClock(){
-  clock.textContent = new Date().toLocaleString("cs-CZ");
-}
-
+/* ===== POMOCNÉ ===== */
 function secToKg(sec){
   return (sec/600)*(+kg10min.value||2.5);
 }
-
-function todayStartISO(){
-  const d = new Date();
-  d.setHours(0,0,0,0);
-  return d.toISOString();
+function secToHMS(sec){
+  sec=Math.round(sec);
+  const h=Math.floor(sec/3600);
+  const m=Math.floor(sec%3600/60);
+  const s=sec%60;
+  return `${h.toString().padStart(2,'0')}:${m.toString().padStart(2,'0')}:${s.toString().padStart(2,'0')}`;
+}
+function updateClock(){
+  clock.textContent=new Date().toLocaleString("cs-CZ");
+}
+function dayKey(){
+  return new Date().toISOString().slice(0,10);
+}
+function resetDaily(sec){
+  if(localStorage.day!==dayKey()){
+    localStorage.day=dayKey();
+    localStorage.baseDay=sec;
+  }
+  if(!localStorage.baseDay) localStorage.baseDay=sec;
+  return sec-localStorage.baseDay;
+}
+function monthStartISO(){
+  const d=new Date();
+  return new Date(d.getFullYear(),d.getMonth(),1).toISOString();
 }
 
 async function fetchFeeds(p){
@@ -141,26 +232,27 @@ async function fetchFeeds(p){
   return (await r.json()).feeds||[];
 }
 
+/* ===== HLAVNÍ UPDATE ===== */
 async function update(){
   const cur=await fetchFeeds("results=1");
   if(!cur.length) return;
   const f=cur[0];
 
-  const tK = +f.field5||0;
-  const tZ = +f.field1||0;
+  const tK=+f.field5||0;
+  const tZ=+f.field1||0;
 
-  tKotel.textContent = tK.toFixed(1)+" °C";
+  tKotel.textContent=tK.toFixed(1)+" °C";
+  tZpet.textContent=tZ.toFixed(1)+" °C";
+  deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
+
   tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
   tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
-  tZpet.textContent  = tZ.toFixed(1)+" °C";
   tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
 
-  deltaT.textContent = (tK - tZ).toFixed(1)+" °C";
-
   const totalSec=+f.field8||0;
-  feedTotal.textContent=totalSec+" s";
+  feedTotal.textContent=secToHMS(totalSec);
 
-  // ===== HODINA =====
+  // HODINA
   const hourFeeds=await fetchFeeds("minutes=60&results=200");
   if(hourFeeds.length>1){
     const hSec=hourFeeds.at(-1).field8-hourFeeds[0].field8;
@@ -169,26 +261,55 @@ async function update(){
     powerKWbig.textContent=(hKg*ENERGY*EFF).toFixed(1)+" kW";
   }
 
-  // ===== DNES OD 00:00 =====
-  const dayFeeds = await fetchFeeds(
-    "start="+todayStartISO()+"&results=8000"
-  );
-  if(dayFeeds.length>1){
-    const daySec = dayFeeds.at(-1).field8 - dayFeeds[0].field8;
-    const dayKg = secToKg(daySec);
-    kgDay.textContent = dayKg.toFixed(2)+" kg";
-    costDay.textContent = (dayKg*(+priceKg.value||15.5)).toFixed(0)+" Kč";
-  }
+  // DEN
+  const daySec=resetDaily(totalSec);
+  const dayKg=secToKg(daySec);
+  kgDay.textContent=dayKg.toFixed(2)+" kg";
+  costDay.textContent=(dayKg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 
-  // ===== MĚSÍC =====
-  const m=await fetchFeeds("days=30&results=8000");
+  // MĚSÍC (OD 1.)
+  const m=await fetchFeeds("start="+monthStartISO()+"&results=8000");
   if(m.length>1){
     const mKg=secToKg(m.at(-1).field8-m[0].field8);
     kgMonth.textContent=mKg.toFixed(0)+" kg";
-    costMonth.textContent=(mKg*(+priceKg.value||15.5)).toFixed(0)+" Kč";
+    costMonth.textContent=(mKg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
   }
 }
 
+/* ===== HISTORIE ===== */
+btnHistory.onclick=async()=>{
+  historyModal.style.display="flex";
+  const feeds=await fetchFeeds("start="+monthStartISO()+"&results=8000");
+
+  const days={};
+  feeds.forEach(f=>{
+    const d=f.created_at.slice(0,10);
+    const v=+f.field8;
+    if(!days[d]) days[d]={min:v,max:v};
+    days[d].min=Math.min(days[d].min,v);
+    days[d].max=Math.max(days[d].max,v);
+  });
+
+  historyTable.querySelector("tbody").innerHTML="";
+  for(const d in days){
+    const sec=days[d].max-days[d].min;
+    const kg=secToKg(sec);
+    const kw=kg*ENERGY*EFF;
+    historyTable.querySelector("tbody").innerHTML+=`
+      <tr>
+        <td>${d}</td>
+        <td>${secToHMS(sec)}</td>
+        <td>${kg.toFixed(2)}</td>
+        <td>${kw.toFixed(1)}</td>
+      </tr>`;
+  }
+};
+
+function closeHistory(){
+  historyModal.style.display="none";
+}
+
+/* ===== START ===== */
 updateClock();
 update();
 setInterval(updateClock,1000);
